@@ -83,6 +83,15 @@ Feature: Project Merge Requests
     And I leave a comment like "Line is wrong" on diff
     And I switch to the merge request's comments tab
     Then I should see a discussion has started on diff
+    And I should see a badge of "1" next to the discussion link
+
+  @javascript
+  Scenario: I see a new comment on merge request diff from another user in the discussion tab
+    Given project "Shop" have "Bug NS-05" open merge request with diffs inside
+    And I visit merge request page "Bug NS-05"
+    And user "John Doe" leaves a comment like "Line is wrong" on diff
+    Then I should see a discussion by user "John Doe" has started on diff
+    And I should see a badge of "1" next to the discussion link
 
   @javascript
   Scenario: I edit a comment on a merge request diff
@@ -100,9 +109,11 @@ Feature: Project Merge Requests
     And I visit merge request page "Bug NS-05"
     And I click on the Changes tab
     And I leave a comment like "Line is wrong" on diff
+    And I should see a badge of "1" next to the discussion link
     And I delete the comment "Line is wrong" on diff
     And I click on the Discussion tab
     Then I should not see any discussion
+    And I should see a badge of "0" next to the discussion link
 
   @javascript
   Scenario: I comment on a line of a commit in merge request
