@@ -3,6 +3,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 v 8.5.0 (unreleased)
 
 v 8.4.0 (unreleased)
+  - Fix diff comments loaded by AJAX to load comment with diff in discussion tab
   - Ensure Gravatar host looks like an actual host
   - Consider re-assign as a mention from a notification point of view
   - Add pagination headers to already paginated API resources
